REGRESSION (r271488): ASSERTION FAILED: m_private->type() != RealtimeMediaSource::Type::Audio || !PlatformMediaSessionManager::sharedManager().hasAudioCaptureSource(*this) https://bugs.webkit.org/show_bug.cgi?id=220752 <rdar://problem/73377854>

Reviewed by Eric Carlson.

Make sure to remove audio capture source in destructor if it was not done so before.
Covered by existing tests.

* Modules/mediastream/MediaStreamTrack.cpp:
(WebCore::MediaStreamTrack::~MediaStreamTrack):
* platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::removeAudioCaptureSource):


Canonical link: https://commits.webkit.org/233183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271668 268f45cc-cd09-0410-ab3c-d52691b4dbfc